src/objects/subscriberValidationRuleInfo__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ruleCode__c</fullName>
        <label>ruleCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ruleGroup__c</fullName>
        <label>ruleGroup</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ruleName__c</fullName>
        <label>ruleName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ruleResultCode__c</fullName>
        <label>ruleResultCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ruleUserMessage__c</fullName>
        <label>ruleUserMessage</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>subscriberValidationRuleInfo</label>
</CustomObject>